--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,6 @@ img {
   align-items: center;
 }
 .link-logo {
-  margin-top: 24px;
   margin-right: 76px;
 
   font-family: "Raleway", sans-serif;
@@ -115,14 +114,12 @@ img {
   color: var(--background-hover-btn);
 }
 /* section 1  */
-.hero {
+.section-hero {
+  padding: 188px 0;
   text-align: center;
   background-color: var(--title-color);
 }
-.hero-content {
-  padding-top: 188px;
-  padding-bottom: 188px;
-}
+
 .caption {
   margin-left: auto;
   margin-right: auto;
@@ -269,14 +266,12 @@ img {
 
 .portfolio-btm:hover,
 .portfolio-btm:focus {
-  border: 1px solid transparent
+  border: 1px solid transparent;
   color: var(--header-color);
   background-color: var(--background-hover-btn);
 }
 
-
-
-.projects-name{
+.projects-name {
   padding: 32px 16px;
   border: 1px solid var(--border-color);
   border-top: none;
